--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <p class="modal-msg">You win</p>
+                <button class="play-again">Yes</button>
             </div>
         </div>
     </div>
